some corrections to align to bottom the content of the text in the cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +8,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 h1 {
@@ -86,33 +88,30 @@ h4 {
   font-size: 1.5rem;
   /* text-transform: uppercase; */
   letter-spacing: 2px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 }
 
 #cards > div {
   float: left;
   width: 25%;
-  height: 300px;
+  height: 380px;
   text-align: center;
-}
-tempo {
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  padding: 2rem;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  z-index: 1;
+  /* height: 0;
+  padding-bottom: 25%;
+  text-align: center; */
 }
 
-.card-content > div {
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-top: 50%;
+.card-content {
+  position: relative;
+}
+
+.card-content div {
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
+  position: absolute;
+  bottom: 0;
+  height: 50%;
   width: 100%;
-  flex-wrap: wrap;
 }
 
 .card1 {
@@ -142,6 +141,10 @@ tempo {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+#form {
+  background-color: #212140;
 }
 
 /* 
